--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,10 @@ services:
   web:
     build: .
     command: rails s -p 3000 -b '0.0.0.0'
+    environment:
+      RAILS_ENV: "production"
+      RACK_ENV: "production"
+      GOKIAPP_DATABASE_PASSWORD: "gokigoki"
     volumes:
       - .:/gokiapp
     ports:
