--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,14 +10,12 @@ services:
 
   web:
     build: .
-    command: rails s -p 3000 -b '0.0.0.0'
+    command: rails s
     environment:
       RAILS_ENV: "production"
       RACK_ENV: "production"
       GOKIAPP_DATABASE_PASSWORD: "gokigoki"
     volumes:
       - .:/gokiapp
-    ports:
-      - "3000:3000"
     links:
       - db
