followed https://qiita.com/kazukimatsumoto/items/a0daa7281a3948701c39

--- a/config/database.yml
+++ b/config/database.yml
@@ -49,7 +49,9 @@ test:
 #
 production:
   <<: *default
+  adapter: postgresql
+  encoding: unicode
+  pool: 5
   database: gokiapp_production
-  #username: gokiapp
   username: root
   password: <%= ENV['GOKIAPP_DATABASE_PASSWORD'] %>
